--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<section id="wrapper">
 			<h1>sequID.js</h1>
-			<h2 id="1">Start typing your sequence below.</h2>
+			<h2 id="1">Start typing your sequence below. By Lalitendu</h2>
 			<div id="main">
 				<input type="text" style="text-transform:uppercase;color:#000000" size="1000" autocomplete="off" placeholder="E.g. ATGCATGCATCGATCGATCGACTGC"></input>
 				<input type="text" value="000" disabled id="charnum"></input>
@@ -58,7 +58,7 @@
 			</div>
 			<!--main-->
 			<p>A project for <a href="http://kv1bbsr.org" target="_blank">Kendriya Vidyalaya No.1 (1st Shift) Bhubaneswar</a>.</br>
-				Developed by <a target="_blank" href="http://zerp.ly/catchprayash">Prayash M</a> and <a target="_blank" href="http://facebook.com/sthita.pm">Sthita M</a>.</br>
+				Developed by <a target="_blank" href="http://prayash.tk/">Prayash M</a> and <a target="_blank" href="http://facebook.com/sthita.pm">Sthita M</a>.</br>
 				Special thanks to <a target="_blank" href="http://facebook.com/">Aakash P</a> for identifying bugs</br>
 				In guidance of <a target="_blank" href="http://twitter.com/nabaneetadas">Nabaneeta Das.</a>
 			</p>
